--- a/2016_1/TJTK/WebContent/SETTING.html
+++ b/2016_1/TJTK/WebContent/SETTING.html
@@ -78,7 +78,7 @@
 </div>
 <br>
     <div align="center">
-    <strong><label style="margin-left: 10px; margin-right:100px; font-size:16px">리모콘 보기</label></strong>
+    <strong><label style="margin-left: 42px; margin-right:70px; font-size:16px" align="left">리모콘 보기</label></strong>
     <label class="switch" style="background-color:#000000">
       <input type="checkbox" class="switch-input">
       <span class="switch-label" data-on="On" data-off="Off"></span>
@@ -87,7 +87,7 @@
     <div class="panel-group" id="accordion1">
       <div class="panel panel-default" style="background-color:#FAF8EE; border-color:#FAF8EE; color:#000000">
         <div class="panel-heading" style="background-color:#FAF8EE; border-color:#FAF8EE; color:#000000">
-          <h4 class="panel-title" align="left"><strong><label data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1" style="margin-left:42px">리모콘 버튼 설정 </label></strong></h4>
+          <h4 class="panel-title" align="center"><strong><label data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">리모콘 버튼 설정 ↓</label></strong></h4>
         </div>
         <div id="collapseOne1" class="panel-collapse collapse in">
     <label style="font-size:16px; margin-right:60px; margin-left:80px">1번 버튼
