--- a/2016_1/TJTK/WebContent/SETTING.html
+++ b/2016_1/TJTK/WebContent/SETTING.html
@@ -108,12 +108,12 @@
     <label style="font-size:16px; margin-right:60px; margin-left:80px">2번 버튼
     </label>
     <div class="btn-group">
-      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;"><a id="one"></a>
       <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
         <li role="presentation" class="dropdown-header">Dropdown header 1</li>
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Link</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onClick="id='one'">First Link</a></li>
         <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Disabled Link</a></li>
         <li role="presentation" class="divider"></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
