--- a/2016_1/TJTK/WebContent/INVENTORY.html
+++ b/2016_1/TJTK/WebContent/INVENTORY.html
@@ -218,15 +218,15 @@ function getTextByClone( tag ){
         return textContent; 
 } 
 </script>
-      <table id="cart_name" class="sortable" style="width:100%; height:80%;" border="0" align="center">
+      <table id="cart_name" class="sortable" style="width: 100%; height: 70%; margin-left: 10px;" border="0" align="center">
     	<div>
         <thead>
         <tr>
-            <th class="name" style="text-align:center; font-size:13px; width:20%">이름<button class="btn" onclick="sortTD(0)" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px" onclick="reverseTD(0)">▼</button></th>
-             <th class="company" style="text-align:center; font-size:13px; width:20%">회사<button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px" onclick="sortTD(1)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px"  onclick="reverseTD(1)">▼</button></th>
+            <th class="name" style="text-align: center; font-size: 13px; width: 22.5%; margin-left:30px">이름<button class="btn" onclick="sortTD(0)" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px" onclick="reverseTD(0)">▼</button></th>
+             <th class="company" style="text-align:center; font-size:13px; width:16%">회사<button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px" onclick="sortTD(1)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px"  onclick="reverseTD(1)">▼</button></th>
 			 <th class="number" style="text-align:center; font-size:13px; width:20%">보유수<button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
               <th class="number" style="text-align:center; font-size:13px; width:20%">주문수<button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px; margin-right:-5px" onclick="sortTD(3)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:7px; width:3px; padding-left:0px"  onclick="reverseTD(3)">▼</button></th>	
-             <th class="button" style="text-align:center; width:20%"></th>
+             <th class="button" style="text-align:center; width:21.5%"></th>
          </tr>
          </thead>
          </div></table>
